--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.1.5",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vuetify": "^3.7.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
+    "sass": "^1.80.1",
+    "sass-loader": "^16.0.2",
     "tailwindcss": "^3.4.13"
   },
   "browserslist": [
